Migrated UI modules onto Keystone
hologram-api, inventory-api, lootchest-api, scoreboard-api, shop-api and sign-api now
import the bean, util, item and persistence packages from Keystone.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SL2fpNXStRsn21A3zwDXBk